assets/css/style.css
body, html {
    height: 100%;
    font-family: 'Exo', sans-serif;
}

/* Navigation */

.navbar {
    padding-bottom: 20px;
    padding-top: 20px;
}

.bg-color-nav {
    background-color: rgba(0, 0, 0,0.8)  
}

.nav-link {
    font-weight: 600;
}

.navbar-light .navbar-brand {
    font-weight: 500;
    color: #fafafa;
    margin-right: 0;
}

.navbar-light .navbar-nav .nav-link {
    Color: #fafafa;
}

.navbar-light .navbar-toggler {
    border-color: #fafafa;
}

.navbar-toggler {
    padding: .25rem .75rem;
    font-size: 1.1rem;
    line-height: 1;
    background-color: transparent;
    border: 1px solid transparent;
    border-radius: .25rem;
}

.active {
    text-decoration: underline;
    color: #007bff !important;
}

/* Navigation  /*/


/* Home page */
/* The hero image + hero text */

/* Credit  for picture from Maria Perez via Pexels: https://www.pexels.com/sv-se/foto/bakad-bakverk-blandad-brod-2128535/ */
/* credit to our friends at w3schools for the Hero-image + hero text with styling: https://www.w3schools.com/howto/howto_css_hero_image.asp /*/
.hero-image {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/hero-image.jpg");
  height: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  border-bottom: solid 5px;
}

.hero-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #b9b9b9;
}

/* The hero image + hero text  /*/

/* Blockquotes */

.tonys-bread {
    border-radius: 50%;
    border: solid 1px #b9b9b9;
}

.quote-bg {
    background-color: #fafafa;
}

.blockquote {
    text-align: center;
    margin-top: 0px;
}

.row>* {
    padding-right: 0;
    padding-left: 0;
}

/* Blockquotes  /*/

/* Opening hours and address */

.find-us {
    text-align: center;
    border-bottom: solid 2px rgba(0, 0, 0, 0.5);
    border-top: solid 2px rgba(0, 0, 0, 0.5);
    background-color: #fafafa;
}

.margin-top {
    margin-top: 50px;
    font-size: large;
}

/* Opening hours and address  /*/

/* Google maps */

/* Google maps credit to mdbootstrap: https://mdbootstrap.com/docs/b4/jquery/javascript/google-maps/  */
.map-container {
    overflow: hidden;
    padding-bottom: 56.25%;
    position: relative;
    height: 100%;
    width: 100%;
   Margin-top: 0;
    }
    
.map-container iframe{
    left:0;
    top:0;
    height:100%;
    width:100%;
    position:absolute;
    }

/* Google maps /*/ 
/* Home page  /*/



/* Products page*/

/* Our products section */

.pre-products {
    border-bottom: solid 1px rgba(0, 0, 0,0.5);
    padding-top: 25px; 
    text-align: center;
    background-color: #fafafa;
}

/* Our products section  /*/

/* Product pictures */

.product-images {
    border-radius: 10%; 
}

.height-of-picture {
    height: 70%;
}

/* Product pictures  /*/

/* product description */

.product-description {
    padding-bottom: 25px;
}

/* Product description  /*/

/* Product badges */

.badge {
    margin-left: 5px;
}

/* Product badges  /*/

/* Product buttons */
/*Created with help from Stackoverflow: https://stackoverflow.com/questions/5817233/align-button-at-the-bottom-of-div-using-css /*/
.btn-info {
    position: absolute;
    left: 0;
    bottom: 0;
    margin-left: 10px; 
}

.space-below {
    margin-bottom: 10px;
}

/* Product buttons  /*/

/* Modals */

.modal-body {
    background-color: #fafafa;
}

.modal-header {
    background-color: rgba(0, 0, 0,0.8);
}

.modal-title {
    color: #fafafa;
}

.modal-footer {
    background-color: rgba(0, 0, 0,0.8);
}

/* Modals  /*/

/* Section background */
.bg-color {
    background-color: #fafafa;
}

/* Section background  /*/

.padding {
    padding: 10px;  
}
        
/* Product page /*/



/* About page */

/* Heading */

.heading-position-about {
    Text-align: center;
}

.black-bar-about {
    border-bottom: solid 3px rgba(0, 0, 0,0.8);
    max-width: 300px;
    text-align: center;
    margin-bottom: 50px;
    padding-top: 30px;
    padding-bottom: 30px;
}

/* Heading /*/

/* About info section */

.about-info {
    max-width: 600px;
}

h4 {
    text-align: left;
}

/* About info section  /*/

/* About picture */

.about-picture {
    margin-bottom: 25px;
    border: solid 2px rgba(0, 0, 0,0.8);
    border-radius: 10%;
}

/* About picture  /*/

.about-bg-color {
    background-color: #fafafa;
}

/* About page / */


/* Contact page */

/* Header */

.heading-position-contact {
    text-align: center;
}

.black-bar-contact {
    border-bottom: solid 3px rgba(0, 0, 0,0.8);
    max-width: 300px;
    text-align: center;
    margin-bottom: 50px;
    padding-top: 30px;
    padding-bottom: 30px;
}

/* Header  /*/

/* Contact info */

.contact-info {
max-width: 600px;
}

/* Contact info  /*/

/* Feedback form */

.feedback-form {
    max-width: 600px;  
}

/* Feedback form  /*/

.contact-bg-color {
    background-color: #b9b9b9;
}

/* Contact page  /*/

/* Footer */

.fab {
    font-size: 20px;
}

.position-right {
    text-align: center;
    border-top: solid 5px;
    background-color: rgba(0, 0, 0,0.8)  
    
}

.fa-facebook-square {
    padding-right: 5px;
}

.fa-instagram-square {
padding: 0 5px 0 5px;
}

.fa-twitter-square {
    padding: 0 5px 0 5px;
}

.position-right p {
    color: #fafafa;
}

/* Footer  /*/

